# cdh

./: .gitattributes  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: install.sh
docs/issues/: 2026-03-20-shell-path-migration.md
scripts/: install.sh  release_notes_template.md
scripts/installers/bash/: install.sh  uninstall.sh
scripts/installers/bash/payload/: cdh.bash  cdh_log.bash
scripts/installers/fish/: install.sh  uninstall.sh
scripts/installers/fish/payload/: cdh.fish  cdh_log.fish
scripts/installers/zsh/: install.sh  uninstall.sh
scripts/installers/zsh/payload/: cdh.zsh  cdh_log.zsh
scripts/release_notes/: v0.1.1.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md
scripts/tools/: commit-msg-check.sh  git-add-guard.sh
src/: app.rs  config.rs  controller.rs  frecency.rs  history.rs  lib.rs  main.rs  paths.rs  picker.rs  recommend.rs
tests/: install_script.rs
